# protein-ligand-benchmark

./: .gitignore  environment.yml  pyproject.toml
plbenchmark/: edges.py  ligands.py  targets.py  utils.py
src/plbenchmark/: __init__.py  _version.py  utils.py
src/plbenchmark/data/: targets.yml
tests/: test_edges.py  test_ligands.py  test_targets.py
