[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Hompage" = "https://github.com/openforcefield/protein-ligand-benchmark"
"Discussions" = "https://github.com/openforcefield/protein-ligand-benchmarkdiscussions"
"Issues" = "https://github.com/openforcefield/protein-ligand-benchmark/issues"

[project]
name = "plbenchmark"
dynamic = ["version"]
description = "Protein-Ligand Benchmark Dataset for testing Parameters and Methods of Free Energy Calculations."
readme = "README.md"
license-files = ["LICENSE"]

authors=[
    {name="David F. Hahn", email="davidfriedrichhahn@gmail.com"},
]

classifiers = [
    # "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    # "Topic :: Scientific/Engineering :: Bio-Informatics",
    # "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = [
    "science",
    "chemistry",
    "biology",
    "drug-design"
]

# requires-python = 
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/plbenchmark/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plbenchmark = [
    "data/**/*.yml",
    "data/**/*.pdb",
    "data/**/*.sdf"
]